--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -27,7 +27,7 @@
   <h1>Meine Bildergalerie</h1>
   <div class="gallery">
     <img src="begegnung-in-der-altstadt.png" alt="Begegnung in der Altstadt">
-    <img src="DB-Hauptbahnhof-8.Juli2024.png" alt="DB Hauptbahnhof">
+    <img src="DB-Hauptbahnhof-8-Juli2024.png" alt="DB Hauptbahnhof">
     <img src="Denker-in-Farbe.jpg" alt="Denker in Farbe">
     <img src="Denker-Umriss.jpg" alt="Denker Umriss">
     <img src="Denker.JPG" alt="Denker Foto">
