--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -32,7 +32,7 @@
     <img src="Denker-Umriss.jpg" alt="Denker Umriss">
     <img src="Denker.JPG" alt="Denker Foto">
     <img src="Nachrichten-Krankenhaus-Krieg.png" alt="Nachrichten Krankenhaus Krieg">
-    <img src="Natur-3.August2024.png" alt="Natur 3. August 2024">
+    <img src="Natur-3-August2024.png" alt="Natur 3. August 2024">
     <img src="Stresssituation.png" alt="Stresssituation">
   </div>
 </body>
