--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -5,21 +5,30 @@
   <title>Meine Bildergalerie</title>
   <style>
     body {
-      font-family: sans-serif;
-      background-color: #f2f2f2;
+      font-family: Arial, sans-serif;
+      background-color: #fafafa;
+      color: #333;
       padding: 30px;
       text-align: center;
     }
     h1 {
-      color: #333;
       margin-bottom: 40px;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
     }
     .gallery img {
       width: 300px;
       max-width: 90%;
-      margin: 20px;
       border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+      transition: transform 0.2s ease;
+    }
+    .gallery img:hover {
+      transform: scale(1.05);
     }
   </style>
 </head>
@@ -30,7 +39,7 @@
     <img src="DB-Hauptbahnhof-8-Juli2024.png" alt="DB Hauptbahnhof">
     <img src="Denker-in-Farbe.jpg" alt="Denker in Farbe">
     <img src="Denker-Umriss.jpg" alt="Denker Umriss">
-    <img src="Denker.JPG" alt="Denker Foto">
+    <img src="Denker.JPG" alt="Denker">
     <img src="Nachrichten-Krankenhaus-Krieg.png" alt="Nachrichten Krankenhaus Krieg">
     <img src="Natur-3-August2024.png" alt="Natur 3. August 2024">
     <img src="Stresssituation.png" alt="Stresssituation">
