--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -2,17 +2,18 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meine Bildergalerie</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #fafafa;
-      color: #333;
-      padding: 30px;
+      background-color: #f9f9f9;
       text-align: center;
+      padding: 40px;
     }
     h1 {
-      margin-bottom: 40px;
+      color: darkslateblue;
+      margin-bottom: 30px;
     }
     .gallery {
       display: flex;
@@ -35,14 +36,15 @@
 <body>
   <h1>Meine Bildergalerie</h1>
   <div class="gallery">
-    <img src="begegnung-in-der-altstadt.png" alt="Begegnung in der Altstadt">
-    <img src="DB-Hauptbahnhof-8-Juli2024.png" alt="DB Hauptbahnhof">
-    <img src="Denker-in-Farbe.jpg" alt="Denker in Farbe">
+    <!-- PNG and JPG images only -->
+    <img src="DB-Hauptbahnhof-8-Juli2024.png" alt="DB Hauptbahnhof 8 Juli 2024">
     <img src="Denker-Umriss.jpg" alt="Denker Umriss">
+    <img src="Denker-in-Farbe.jpg" alt="Denker in Farbe">
     <img src="Denker.JPG" alt="Denker">
     <img src="Nachrichten-Krankenhaus-Krieg.png" alt="Nachrichten Krankenhaus Krieg">
     <img src="Natur-3-August2024.png" alt="Natur 3. August 2024">
     <img src="Stresssituation.png" alt="Stresssituation">
+    <img src="begegnung-in-der-altstadt.png" alt="Begegnung in der Altstadt">
   </div>
 </body>
 </html>
