--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -8,14 +8,14 @@
 <body>
   <h1>Maximilian Juhasz – Bildersammlung</h1>
 
-  <img src="1.png" alt="DB-Hauptbahnhof">
-  <img src="8.jpg" alt="Denker Umriss">
-  <img src="7.jpg" alt="Denker in Farbe">
-  <img src="6.JPG" alt="Denker">
-  <img src="2.png" alt="Krankenhaus Krieg">
-  <img src="3.png" alt="Natur">
-  <img src="4.png" alt="Stresssituation">
-  <img src="5.png" alt="Altstadt">
+  <img src="images/1.png">
+  <img src="images/8.jpg">
+  <img src="images/7.jpg">
+  <img src="images/6.JPG">
+  <img src="images/2.png">
+  <img src="images/3.png">
+  <img src="images/4.png">
+  <img src="images/5.png">
 
 </body>
 </html>
