--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -11,7 +11,7 @@
   <img src="images/1.png">
   <img src="images/8.jpg">
   <img src="images/7.jpg">
-  <img src="images/6.JPG">
+  <img src="images/6.jpg">
   <img src="images/2.png">
   <img src="images/3.png">
   <img src="images/4.png">
