--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Maximilian Juhasz</title>
+  <title>Maximilian Juhasz – Bildersammlung</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Maximilian Juhasz – Bildersammlung</h1>
 
-  <img src="images/1.png">
-  <img src="images/8.jpg">
-  <img src="images/7.jpg">
-  <img src="images/6.jpg">
-  <img src="images/2.png">
-  <img src="images/3.png">
-  <img src="images/4.png">
-  <img src="images/5.png">
+  <img src="./images/1.jpg">
+  <img src="./images/2.jpg">
+  <img src="./images/3.jpg">
+  <img src="./images/4.jpg">
+  <img src="./images/5.jpg">
+  <img src="./images/6.jpg">
+  <img src="./images/7.jpg">
+  <img src="./images/8.jpg">
 
 </body>
 </html>
