--- a/maximilianjuhasz.net/index.html
+++ b/maximilianjuhasz.net/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Maximilian Juhasz – Bildersammlung</title>
+  <title>Maximilian Juhasz</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
