--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Meine Seite</title>
+  <title>Maximilian Juhasz</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
-    <a href="dichtung.html">Dichtung</a>
-    <a href="bild.html">Bild</a>
-  </nav>
   <main>
-    <h1>Willkommen</h1>
-    <p>Wähle eine Kategorie: Dichtung oder Bild.</p>
+    <h1>Maximilian Juhasz</h1>
+    <nav>
+      <a href="dichtung.html">Dichtung</a>
+      <a href="bild.html">Bild</a>
+    </nav>
   </main>
 </body>
 </html>
