--- a/dichtung.html
+++ b/dichtung.html
@@ -2,11 +2,12 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Dichtung</title>
+  <title>Dichtung - Maximilian Juhasz</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
+    <a href="index.html">Home</a>
     <a href="dichtung.html">Dichtung</a>
     <a href="bild.html">Bild</a>
   </nav>
