--- a/bild.html
+++ b/bild.html
@@ -2,11 +2,12 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Bild</title>
+  <title>Bild - Maximilian Juhasz</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <nav>
+    <a href="index.html">Home</a>
     <a href="dichtung.html">Dichtung</a>
     <a href="bild.html">Bild</a>
   </nav>
