--- a/dichtung.html
+++ b/dichtung.html
@@ -56,7 +56,7 @@
     
     <div class="slider-container">
       <div class="slider">
-        <div class="slide">
+        <div class="slide active">
           <img src="Dichtung/1.png" alt="Gedicht 1">
         </div>
         <div class="slide">
