--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Maximilian Juhasz</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
   <main>
     <h1>Maximilian Juhasz</h1>
     <nav>
