--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Maximilian Juhasz</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="home">
   <main>
     <h1>Maximilian Juhasz</h1>
     <nav>
@@ -14,7 +14,6 @@
     </nav>
   </main>
   <script>
-    // Highlight current page link
     const path = window.location.pathname.split("/").pop();
     const links = document.querySelectorAll("nav a");
     links.forEach(link => {
