--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
   <meta charset="UTF-8">
   <title>Maximilian Juhasz</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Override styles to remove white box and make text white */
+    main {
+      background: transparent !important; /* Remove any background */
+      box-shadow: none !important; /* Remove any box shadow */
+      padding: 0 !important; /* Remove any padding that might create space */
+    }
+    
+    h1, nav a {
+      color: white !important; /* Make header and links white */
+    }
+    
+    /* Maintain any hover effects but ensure they're also white */
+    nav a:hover {
+      color: white !important;
+    }
+  </style>
 </head>
 <body class="home">
   <main>
