--- a/bild.html
+++ b/bild.html
@@ -59,7 +59,7 @@
 </head>
 <body class="bild">
   <nav>
-    <a href="index.html">Home</a>
+    <a href="/">Home</a>
     <a href="dichtung.html">Dichtung</a>
     <a href="bild.html">Bild</a>
   </nav>
