--- a/dichtung.html
+++ b/dichtung.html
@@ -71,7 +71,7 @@
 </head>
 <body class="dichtung">
   <nav>
-    <a href="/">Home</a>
+    <a href="https://www.maximilianjuhasz.net">Home</a>
     <a href="dichtung.html">Dichtung</a>
     <a href="bild.html">Bild</a>
   </nav>
